# mneme-guardian

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  diff.rs  hooks.rs  lib.rs  main.rs  mneme.rs  providers.rs  review.rs  tui.rs  update.rs
tests/: diff_tests.rs  integration.rs  providers_tests.rs
