[package]
name = "mneme-guardian"
version = "0.1.0"
edition = "2021"
description = "mneme-guardian — Provider-agnostic AI code review. Pre-commit guardian with mneme memory integration."
license = "MIT"
repository = "https://github.com/daddydiaz2/mneme-guardian"

[[bin]]
name = "mneme-g"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
