[package]
name = "mneme-guardian"
version = "0.2.0"
edition = "2021"
description = "mneme-guardian — Provider-agnostic AI code review. Pre-commit guardian with mneme memory integration."
license = "MIT"
repository = "https://github.com/daddydiaz2/mneme-guardian"
homepage = "https://github.com/daddydiaz2/mneme-guardian"
documentation = "https://github.com/daddydiaz2/mneme-guardian#readme"
keywords = ["ai", "code-review", "pre-commit", "guardian", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mneme-g"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }
ratatui = { version = "0.27", features = ["all-widgets"] }
crossterm = { version = "0.27", features = ["event-stream"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
